kubernetes-deployment/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: fra.com
    http:
      paths:
      
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client-service
            port:
              number: 80

      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: keycloak-service
            port:
              number: 80
            paths:

      - path: /api
        pathType: Prefix
        backend:
          service:
            name: server-service
            port:
              number: 80

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
